fix buttonplacement on ios gui

--- a/GATEWAY/src/pages/home/home.scss
+++ b/GATEWAY/src/pages/home/home.scss
@@ -2,10 +2,6 @@ page-home {
 
 }
 
-ion-title {
-  float: left;
-}
-
 .mainList {
   margin-left: 10px;
   margin-right: 10px;
@@ -13,10 +9,6 @@ ion-title {
 
 .devices {
   margin-bottom: 7px;
-}
-
-.titleBttn {
-  float: right;
 }
 
 .bttn {
